# pandashift

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
src/pandashift/: __init__.py  constants.py  create_table_from_df.py  functions.py  load_df.py  read_execute.py
tests/: __init__.py  config.json  test_auto_create_table.py  test_create_table.py  test_create_table_misc.py  test_float.py  test_int.py  test_no_env_analyze.py  test_str.py  test_super.py  test_timestamp.py  utils.py
